@@ -1,3 +1,9 @@
+Wed May 26 17:17:29 2004  Steve Huston  <shuston@riverace.com>
+
+	* modules/AutomakeWorkspaceCreator.pm: In write_comps(), when writing
+	  the SUBDIRS list, only list next-level directories - SUBDIRS is
+	  only allowed to list them, and not anything below.
+
 Mon May 24 13:44:13 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/WorkspaceCreator.pm:
